# accept-or-reject-raylib

./: .gitignore  CMakeLists.txt  Game  Makefile  README.md  build  build.sh  rebuild.sh  run.sh  test_CMakeLists.txt
include/: Node.h  Node2d.h  Sprite.hpp  bullet.h  button.h  case.h  gameobject.hpp  globals.h  input.hpp  main.h  player.h  player_old.h  raylib.h  rect_object.h  square.h  square.hpp  timer.h
include/raylib/: raymath.h
src/: Node.cpp  Node2d.cpp  Sprite.cpp  Square.cpp  bullet.c  button.c  case.c  gameobject.cpp  main.c  main.cpp  player.c  player.cpp  player_old.c  rect_object.c  sprite.cpp  square.c  square.cpp  timer.c
src/header/: Square.h  Square.hpp  square.hpp
src/include/: gameobject.hpp  sprite.hpp  square.hpp
src/kgolib/: gameobject.cpp  gameobject.hpp
